# projet_GPU

./: .cproject  .project  BS_Monte_Carlo  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
includes/: FinancialAsset.h  auxiliary.h
output/: results.csv  results2.csv
src/: FinancialAsset.cpp  auxiliary.cpp  main.cpp
